<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_nanodegree_apps">My Android Apps!</string>
    <string name="button">Popular Movies</string>
    <string name="button2">Stock Hawk</string>
    <string name="button3">Build it Bigger</string>
    <string name="button4">Make Your App Material</string>
    <string name="button5">Go Ubiquitous</string>
    <string name="button6">Capstone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sort_main">Sort Order</string>
    <string name="settings">Settings</string>
    <string name="sort_selection">Select Sort Order</string>

    <string name="pref_sort_popular_label">By Most Popular</string>
    <string name="pref_sort_rated_label">By Highest-Rated</string>

    <string name="pref_sort_popular">popular</string>
    <string name="pref_sort_rated">top_rated</string>

</resources>
