<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.myappportfolio.MainActivity"
    android:background="#adc7d4cb">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_nanodegree_apps"
        android:id="@+id/textView"
        android:layout_marginTop="46dp"
        android:textColor="#090909"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:id="@+id/button"
        android:textColor="#ffffff"
        android:background="#e40f1c19"
        android:layout_below="@+id/textView"
        android:layout_marginTop="28dp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:onClick="clickPmovies"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2"
        android:id="@+id/button2"
        android:textColor="#ffffff"
        android:background="#e40f1c19"
        android:layout_below="@+id/button"
        android:layout_marginTop="8dp"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:onClick="clickStockHawk"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button3"
        android:id="@+id/button3"
        android:textColor="#ffffff"
        android:background="#e40f1c19"
        android:layout_below="@+id/button2"
        android:layout_marginTop="8dp"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:onClick="clickBuildIt"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button4"
        android:id="@+id/button4"
        android:textColor="#ffffff"
        android:background="#e40f1c19"
        android:layout_below="@+id/button3"
        android:layout_marginTop="8dp"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:onClick="clickMakeApp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button5"
        android:id="@+id/button5"
        android:textColor="#ffffff"
        android:background="#e40f1c19"
        android:layout_below="@+id/button4"
        android:layout_marginTop="8dp"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:onClick="clickGoUbt"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button6"
        android:id="@+id/button6"
        android:textColor="#ffffff"
        android:background="#e40f1c19"
        android:layout_below="@+id/button5"
        android:layout_marginTop="8dp"
        android:layout_alignLeft="@+id/button5"
        android:layout_alignStart="@+id/button5"
        android:layout_alignRight="@+id/button5"
        android:layout_alignEnd="@+id/button5"
        android:onClick="clickCapstone"/>
</RelativeLayout>
